# learner

./: .codecov.yaml  .gitignore  .release-plz.toml  Cargo.toml  README.md  build.rs  justfile
.github/: labels.yaml
.github/workflows/: check.yaml  coverage.yaml  release.yaml
crates/learner/: CHANGELOG.md  Cargo.toml
crates/learner/config/: config.toml  retrieval.toml  state.toml  storage.toml
crates/learner/config/resource/: thesis.toml
crates/learner/config/resources/: book.toml  paper.toml  thesis.toml
crates/learner/config/retrievers/: arxiv.toml  doi.toml  iacr.toml
crates/learner/config_new/: arxiv.toml  base_resource.toml  config.toml  doi.toml  iacr.toml  paper.toml  paper_record.toml  retrieval.toml  state.toml  storage.toml
crates/learner/migrations/: v1.sql
crates/learner/src/: configuration.rs  database.rs  environment.rs  error.rs  errors.rs  format.rs  lib.rs  llm.rs  paper.rs  pdf.rs  record.rs  template.rs  test.json
crates/learner/src/client/: arxiv.rs  doi.rs  iacr.rs  mod.rs
crates/learner/src/clients/: arxiv.rs
crates/learner/src/database/: mod.rs  models.rs  record.rs  tests.rs
crates/learner/src/database/instruction/: add.rs  document.rs  mod.rs  query.rs  remove.rs
crates/learner/src/database/query/: add.rs  mod.rs  search.rs
crates/learner/src/resource/: mod.rs  paper.rs  shared.rs
crates/learner/src/retriever/: config.rs  doi_test.json  json.rs  mod.rs  response.rs  xml.rs
crates/learner/src/retriever/response/: json.rs  mod.rs  xml.rs
crates/learner/tests/: integration.rs  lib.rs
crates/learner/tests/.config/: doi_response.json  retriever_arxiv.json  retriever_arxiv.toml  retriever_doi.json  retriever_doi.toml  retriever_iacr.json  retriever_iacr.toml
crates/learner/tests/.data/: test_paper.tex
crates/learner/tests/data/: test_paper.tex
crates/learner/tests/database/: find.rs  mod.rs  save.rs
crates/learner/tests/database/instruction/: add.rs  document.rs  mod.rs  query.rs  remove.rs
crates/learner/tests/database/query/: add.rs  mod.rs  search.rs
crates/learner/tests/llm/: mod.rs
crates/learner/tests/workflows/: build_retriever.rs  mod.rs  paper_retrieval.rs
crates/learner/tests/workflows/database_operations/: add.rs  mod.rs  query.rs  remove.rs
crates/learnerd/: CHANGELOG.md  Cargo.toml  build.rs  comp.fish
crates/learnerd/src/: error.rs  errors.rs  interaction.rs  main.rs
crates/learnerd/src/commands/: add.rs  clean.rs  daemon.rs  download.rs  get.rs  init.rs  mod.rs  remove.rs  search.rs
crates/learnerd/src/daemon/: linux.rs  macos.rs  mod.rs
crates/learnerd/src/tui/: app.rs  event.rs  mod.rs  state.rs  styles.rs  ui.rs
crates/learnerd/tests/: cli.rs
crates/sdk/: CHANGELOG.md  Cargo.toml
crates/sdk/src/: main.rs  validate.rs
