[workspace]
members  = ["crates/learner", "crates/learnerd"]
resolver = "2"

[workspace.package]
authors    = ["Colin Roberts"]
edition    = "2021"
keywords   = ["learning", "research", "automation", "papers"]
license    = "Apache-2.0"
readme     = "README.md"
repository = "https://github.com/autoparallel/learner"

[workspace.dependencies]
# local
learner = { path = "crates/learner", version = "0.2.3" }

# shared
dirs = { version = "5.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.41", default-features = false, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
] }
tracing = { version = "0.1", default-features = false }

# learner only
chrono = { version = "0.4", default-features = false, features = ["serde"] }
lazy_static = { version = "1.5", default-features = false }
quick-xml = { version = "0.37", default-features = false, features = [
  "serialize",
] }
regex = { version = "1.11", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rusqlite = { version = "0.32", default-features = false, features = [
  "bundled",
  "functions",
  "chrono",
] }
serde_json = { version = "1.0", default-features = false }
tokio-rusqlite = { version = "0.6", default-features = false }
url = { version = "2.5", default-features = false }
lopdf = { version = "0.34", default-features = false }

# learnerd only
clap = { version = "4.0", default-features = false, features = [
  "derive",
  "std",
] }
console = { version = "0.15", default-features = false }
dialoguer = { version = "0.11", default-features = false }
glob = { version = "0.3", default-features = false }
nix = { version = "0.29.0", default-features = false, features = ["signal"] }
tracing-appender = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
] }

# dev only
anyhow       = { version = "1.0", default-features = false }
assert_cmd   = { version = "2.0", default-features = false }
predicates   = { version = "3.1", default-features = false }
serial_test  = { version = "3.1", default-features = false }
tempfile     = { version = "3.13", default-features = false }
tokio-test   = { version = "0.4" }
tracing-test = { version = "0.2", default-features = false }
