[workspace]
members  = ["crates/learner", "crates/learnerd"]
resolver = "2"

[workspace.package]
authors    = ["Colin Roberts"]
edition    = "2021"
keywords   = ["learning", "research", "automation", "papers"]
license    = "Apache-2.0"
readme     = "README.md"
repository = "https://github.com/autoparallel/learner"

[workspace.dependencies]
# local
learner = { path = "crates/learner", version = "=0.7.0" }

# shared dependencies
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
tokio = { version = "1.41", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "signal",
] }
tracing = { version = "0.1" }

# learner dependencies
async-trait = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "5.0" }
futures = { version = "0.3.31" }
lazy_static = { version = "1.5" }
lopdf = { version = "0.34" }
quick-xml = { version = "0.37", features = ["serialize"] }
regex = { version = "1.11" }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
rusqlite = { version = "0.32", features = ["bundled", "functions", "chrono"] }
serde_json = { version = "1.0" }
tokio-rusqlite = { version = "0.6" }
toml = { version = "0.8" }

## TUI dependencies
crossterm = { version = "0.28" }
ratatui   = { version = "0.29" }

# learnerd dependencies
clap               = { version = "4.0", features = ["derive", "std"] }
console            = { version = "0.15" }
dialoguer          = { version = "0.11" }
glob               = { version = "0.3" }
nix                = { version = "0.29.0", features = ["signal"] }
tracing-appender   = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# dev only
anyhow       = { version = "1.0" }
assert_cmd   = { version = "2.0" }
predicates   = { version = "3.1" }
serial_test  = { version = "3.1" }
tempfile     = { version = "3.13" }
tokio-test   = { version = "0.4" }
tracing-test = { version = "0.2", features = ["no-env-filter"] }
