[package]
authors.workspace    = true
description          = "A simple library for learning stuff"
documentation        = "https://docs.rs/learner"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "learner"
readme.workspace     = true
repository.workspace = true
version              = "0.6.0"

[features]
default = []
tui     = ["dep:ratatui", "dep:crossterm"]

[dependencies]
chrono         = { workspace = true }
dirs           = { workspace = true }
lazy_static    = { workspace = true }
lopdf          = { workspace = true }
quick-xml      = { workspace = true }
regex          = { workspace = true }
reqwest        = { workspace = true }
rusqlite       = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
tokio          = { workspace = true }
tokio-rusqlite = { workspace = true }
tracing        = { workspace = true }
async-trait    = { workspace = true }

# TUI dependencies (optional)
crossterm = { workspace = true, optional = true }
ratatui   = { workspace = true, optional = true }

[dev-dependencies]
anyhow       = { workspace = true }
tempfile     = { workspace = true }
tokio-test   = { workspace = true }
tracing-test = { workspace = true }
