[package]
authors.workspace    = true
description          = "The way to interact and learn stuff"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "learnerd"
readme.workspace     = true
repository.workspace = true
version              = "0.2.0"

[[bin]]
name = "learner"
path = "src/main.rs"

[features]
default = []
tui     = ["dep:ratatui", "dep:crossterm"]

[dependencies]
chrono             = { workspace = true }
clap               = { workspace = true }
console            = { workspace = true }
dialoguer          = { workspace = true }
glob               = { workspace = true }
learner            = { workspace = true }
nix                = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }

# TUI dependencies (optional)
crossterm = { workspace = true, optional = true }
ratatui   = { workspace = true, optional = true }

[dev-dependencies]
anyhow      = { workspace = true }
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
serial_test = { workspace = true }
tempfile    = { workspace = true }
