[package]
authors.workspace    = true
description          = "The way to interact and learn stuff"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "learnerd"
readme.workspace     = true
repository.workspace = true
version              = "0.3.3"

[[bin]]
name = "learner"
path = "src/main.rs"

[features]
default = []
tui     = ["dep:ratatui", "dep:crossterm"]

[dependencies]
chrono             = { workspace = true }
clap               = { workspace = true }
clap_complete      = { workspace = true }
console            = { workspace = true }
dialoguer          = { workspace = true }
glob               = { workspace = true }
learner            = { workspace = true }
serde              = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }

# TUI dependencies (optional)
crossterm = { workspace = true, optional = true }
ratatui   = { workspace = true, optional = true }

# Non-nix dependencies
[target.'cfg(not(target_os = "windows"))'.dependencies]
nix = { workspace = true }


[dev-dependencies]
anyhow      = { workspace = true }
assert_cmd  = { workspace = true }
predicates  = { workspace = true }
serial_test = { workspace = true }
tempfile    = { workspace = true }
