[package]
edition = "2021"
name    = "learner-sdk"
version = "0.1.0"

[dependencies]
clap               = { workspace = true }
learner            = { workspace = true }
tempfile           = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
