[package]
authors.workspace    = true
description          = "A simple SDK for making things to learn stuff"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "learner-sdk"
readme.workspace     = true
repository.workspace = true
version              = "0.1.0"

[dependencies]
clap               = { workspace = true }
learner            = { workspace = true }
regex              = { workspace = true }
reqwest            = { workspace = true }
tempfile           = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
